--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
 	"author": "",
 	"license": "ISC",
 	"dependencies": {
-		"dotenv": "^16.3.1",
-		"puppeteer": "^21.1.0",
-		"puppeteer-core": "^21.2.1",
-		"puppeteer-extra": "^3.3.6",
-		"puppeteer-extra-plugin-stealth": "^2.11.2",
-		"rrule": "^2.7.2"
+		"dotenv": "16.3.1",
+		"puppeteer": "21.1.0",
+		"puppeteer-core": "22.3.0",
+		"puppeteer-extra": "3.3.6",
+		"puppeteer-extra-plugin-stealth": "2.11.2",
+		"rrule": "2.7.2"
 	},
 	"devDependencies": {
 		"@types/chai": "^4.3.5",
